syntax = "proto3";

import "acs1.proto";
import "acs6.proto";

option csharp_namespace = "AElf.Contracts.TestContract.CommitmentScheme";

service CommitmentSchemeContract {
    option (aelf.csharp_state) = "AElf.Contracts.TestContract.CommitmentScheme.CommitmentSchemeContractState";
    option (aelf.base) = "acs1.proto";
    option (aelf.base) = "acs6.proto";
}

message RequestSlot {
    sint64 round_number = 1;
    sint32 order = 2;
    sint64 block_height = 3;
}